[package]
name = "rkvm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
env_logger = "0.9.0"
log = "0.4.17"
once_cell = "1.13.1"
[dependencies.windows]
version = "0.39.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Media_Control",
    "Foundation",
    "Foundation_Collections",
    "ApplicationModel",
    "Storage_Streams",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_DataExchange",
    "Win32_System_SystemServices",
    "Win32_System_Memory",
    "Win32_System_SystemInformation",
    "Win32_System_Com",
    "Win32_UI_Shell",
]
